site/shop/shop-styles.css
:root {
    --header-height: 200px;
}

p {
    color: green;
}

.shop-main-navbar {
    display: flex;
    max-width: 1150px;
    width: 100vw;
    min-width: 500px;

    justify-content: end;
    align-items: center;
    gap: 30px;
}

p {
    color: black;
}

body {
    /* padding: 0; */
    margin: 0px;
}

.shop-main {
    padding-top: 200px;
    display: flex;
    justify-content: center;
}

.shop-sidebar {
    display: flex;
    flex-direction: column;
    align-items: start;
    flex-grow: 1;
    /* flex-shrink: 2; */
    padding: 10px 20px 20vw 10px;
    /* flex-shrink: 1; */
    /* width: 20%; */
    /* width: 150px */
    width: 150px;
}

.product-brand-filter {
    padding: 20px;
    min-width: 100px;
}

.product-list-container {
    display: flex;
    flex-direction: column;
    align-items: end;
    flex-grow: 1;
    gap: 20px;
    padding: 10px 20px 0px 10px;
    width: 950px;
}

.title {
    flex-grow: 1;
    justify-self: center;
    /* padding-left: 50px; */
}

